	* Changed the Solr status check to only show the complete version number, if it is different from the short version number, this is the case with custom builds
	* Added a PHP port of the Acccess Rootline
	* Added refactored facet renderer architecture to allow custom facet renderers
	* Added support for multi / single value field auto-detection in field processors

2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Removed preset font family
	* Removed rounded corners from the autocomplete box

2011-01-28  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Updated jQuery UI to 1.8.9
	* Refactored provided jQuery UI JavaScript files and stylesheets

2011-01-26  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed schema, remove the ISOLatin mapping from the schema after problems with umlauts

2011-01-26  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fixed bug #10668: Queries that don't return any results cause rendering of JavaScript code inside of the suggestion box

2011-01-20  Markus Goldbach  <markus.goldbach@dkd.de>

	* Fixed issue where xclass declaration of tslib_cObj produce fatal php errors in backend mode.

2010-11-29  Markus Goldbach <markus.goldbach@dkd.de>

	* Added Tomcat configuration to setup UTF-8 URL support and bind Tomcat to localhost for security reason
	* Changed install script to deploy the Tomcat configuration

2010-11-29  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #9808: Plugin does not work when on a mounted page
	* Changed autowarmCount for solr.FastLRUCache in solrconfig.xml for better performance of newly opened searchers

2010-11-24  Markus Goldbach <markus.goldbach@dkd.de>

	* Changed Schema, remove ISOLatin mapping from type textSpell, after problems with umlauts in suggestion

2010-11-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added a parameter to the constructor of tx_solr_Search to explicitly set the tx_solr_SolrService connection to use when searching